--- a/scss/utilities/_flex-group.scss
+++ b/scss/utilities/_flex-group.scss
@@ -3,6 +3,7 @@
 .flex-group {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   column-gap: var(--flex-column-gap, $flex-group-gap);
   row-gap: var(--flex-row-gap, calc($flex-group-gap / 2));
 }
