--- a/styles.css
+++ b/styles.css
@@ -273,11 +273,16 @@ a:hover, a:focus {
 @media screen and (min-width: 35.8125rem) {
   .stat__list {
     margin-block-end: 2rem;
-    padding: 1.125rem 2rem;
+    padding: 1rem 2rem;
     text-align: left;
   }
   .stat__list li {
     flex-basis: 30%;
+  }
+}
+@media screen and (min-width: 75rem) {
+  .stat__list {
+    margin-block-end: 2.5rem;
   }
 }
 
@@ -340,12 +345,12 @@ form[role=search] input {
   border: none;
   border-radius: 0.9375rem;
   cursor: pointer;
-  padding: 1.25rem 1rem 1.25rem 2.8125rem;
+  padding: 1.125rem 1rem 1.125rem 2.8125rem;
 }
 @media screen and (min-width: 35.8125rem) {
   form[role=search] input {
     font-size: var(--fs-500);
-    padding: 1.25rem 1rem 1.25rem 5rem;
+    padding: 1.375rem 1rem 1.375rem 5rem;
   }
 }
 form[role=search] input::placeholder {
@@ -371,6 +376,11 @@ form[role=search] .error {
     right: 8.75rem;
   }
 }
+@media screen and (min-width: 35.8125rem) {
+  form[role=search] {
+    margin-block-end: 1.5rem;
+  }
+}
 
 .site-header {
   padding-block-start: 1.875rem;
@@ -381,9 +391,9 @@ form[role=search] .error {
     padding-block-start: 8.75rem;
   }
 }
-@media screen and (min-width: 35.8125rem) {
+@media screen and (min-width: 75rem) {
   .site-header {
-    padding-block-start: 8.75rem;
+    padding-block-start: 9rem;
   }
 }
 .site-header__layout {
@@ -416,6 +426,7 @@ form[role=search] .error {
 .flex-group {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   column-gap: var(--flex-column-gap, 1rem);
   row-gap: var(--flex-row-gap, 0.5rem);
 }
